Revert "flash message"
This reverts commit cde1dcacd6b1cc29115711eb19ce312d0fb57a9e.

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,9 +2,9 @@
   .groups__header
     .groups__header__box
       .groups__header__box__name
-         = current_user.name
+        masa
       .groups__header__box__btn
-        = link_to edit_user_path(current_user), class: "groups__header__box__btn__edit" do
+        = link_to "#", class: "groups__header__box__btn__edit" do
           = icon('far','edit', class: "groups__header__box__btn__edit__icon")
         = link_to "#", class: "groups__box groups__header__box__btn__set" do
           = icon('fa','cog', class: "groups__header__box__btn__set__icon")
