--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,14 +2,18 @@
   .groups__header
     .groups__header__box
       .groups__header__box__name
-        masa
+        = current_user.name
       .groups__header__box__btn
-        = link_to "#", class: "groups__header__box__btn__edit" do
+        = link_to new_group_path class: "groups__header__box__btn__edit" do
           = icon('far','edit', class: "groups__header__box__btn__edit__icon")
-        = link_to "#", class: "groups__box groups__header__box__btn__set" do
+        = link_to edit_user_path(current_user), class: "groups__box groups__header__box__btn__set" do
           = icon('fa','cog', class: "groups__header__box__btn__set__icon")
+
   .groups__under
-    .groups__under__new
-      techcamp
-      .groups__under__new__message
-        まだメッセージがありません
+    - current_user.groups.each do |group|
+      .groups__under__new
+        = link_to '#' do
+          .groups__under__new__name
+            = group.name
+          .groups__under__new__message
+            まだメッセージがありません
