送信機能完了

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,32 +1,27 @@
 .main
   .main__header
     .main__header__test
-      test
+      =@group.name
       .main__header__test__member
-        Member : masa
+        Member:
+        =current_user.name
     .main__header__edit
-      = link_to "#", class: "main__header__edit--btn" do
+      = link_to edit_group_path(@group.id), class: "main__header__edit--btn" do
         Edit
   .main__middle
     .main__middle__dates
-      .main__middle__dates__name
-        Masa
-      .main__middle__dates__date
-        2019/11/20(web) 17:43:01
-    .main__middle__greet
-      おはよう！
-    .main__middle__dairy
-      .main__middle__dairy__name
-        masa
-      .main__middle__dairy__date
-        2019/11/20(Web) 17:43:34
-    .main__middle__text
-      今日は夜から雨
+      = render @messages
+    -#   .main__middle__dates__name
+    -#   .main__middle__dates__date
+    -# .main__middle__greet
   .main__form
-    %form.main__form__message
+    .main__form__message
       .main__form__message__box
-        %input.main__form__message__box__text{:type=> "text", :placeholder=> 'type a message'} 
-        %label{class: "main__form__message__box__image"}
-          = icon('fas', 'image')
-          %input{type: "file", class: "main__form__message__box__file"}
-      %input.main__form__message__btn{:type=> "submit", :value=> "Send"}
+        = form_for [@group, @message] do |f|
+          .main__form__message__box__type
+            = f.text_field :content, class: "main__form__message__box__text", placeholder: 'type a message'
+            .main__form__message__box__type__image
+              = f.label :image do
+                = icon('fas', 'image', class: 'icon')
+                = f.file_field :image, class: 'main__form__message__box__type__image__hidden'
+          = f.submit 'Send', class: 'main__form__message__btn'
