--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -105,68 +105,79 @@
     &__middle {
       background-color: #fafafa;
       height : calc(100vh - 190px);
-      padding-left: 40px;
-      &__dates {
-        display: flex;
-        padding-top: 35px; 
-        &__name {
-          color: #333333;
-          font-size: 16px;
-      }
-        &__date {
-          color: #999999;
-          font-size: 12px;
-          padding-left: 10px;
-      }
-      }
-      &__greet {
-        color:#434A54;
-        font-size: 14px;
-        padding-top: 12px;
-      }
-      &__dairy {
-        padding-top: 46px;
-        display: flex;
-        &__name {
-          color: #333333;
-          font-size: 16px;
+      padding: 46px 40px;
+      .message { 
+        padding-top: 35px;
+        .upper-message{
+          margin-bottom: 10px;
+          &__user-name{
+            display: flex;
+            color: #434a54;
+            font-size: 16px;
+            font-weight: bold;
+          }
+          &__date{
+            color: #999999;
+            font-size: 12px;
+            margin-left: 10px;
+          }
         }
-        &__date {
-          color: #999999;
-          font-size: 12px;
-          padding-left: 10px;
+        .lower-message {
+          &__content {
+            color: #434a54;
+            font-size: 14px;
+            margin-bottom: 10px;
+          }
         }
       }
-      &__text {
-        color: #434A54;
-        font-size: 14px;
-        padding-top: 12px;
-      }
+      //   &__name {
+      //     color: #333333;
+      //     font-size: 16px;
+      //     font-weight: bold;
+      // }
+      //   &__date {
+      //     color: #999999;
+      //     font-size: 14px;
+      //     margin-left: 10px;
+      //   }
+      // &__greet {
+      //   color:#434A54;
+      //   font-size: 14px;
+      //   margin-bottom: 12px;
+
     }
     &__form {
       background-color: #d2d2d2;
       height: 90px;
       padding: 20px 40px;
+      display: flex; 
+      width: 100%;
       &__message{
-      display:flex;
+        width: 100%;
         &__box {
-          position: relative;
-          width: 100%; 
-          &__text {
-            height: 50px;
+          width: 100%;
+          .new_message {
+            display: flex;
+          }
+          &__type {
+            position: relative;
             width: 100%;
-            padding: 0 40px 0 10px;
+            .main__form__message__box__text {
+              height:50px;
+              width:100%;
+              padding: 0 40px 0 10px;
+            }
+            &__image {
+              position: absolute;
+              top: 10px;
+              right: 10px;
+              cursor: pointer;
+                &__hidden{
+                display: none;
+                }
+            }
           }
-          &__image {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-          }
-            &__file{
-            display: none;
-          }
-   }
+        }
       &__btn {
         width: 100px;
         height: 50px; 
@@ -176,6 +187,6 @@
         color: white; 
         cursor: point;
       }
-  }
  }
+}
 }
