--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -106,6 +106,7 @@
       background-color: #fafafa;
       height : calc(100vh - 190px);
       padding: 46px 40px;
+      overflow: scroll;
       .message { 
         padding-top: 35px;
         .upper-message{
